CustomObjects/objects/SBQQDS__DocuSignRecipient__c.object
<CustomObject>
    <description>Identifies a recipient for the DocuSign envelope.</description>
    <fields>
        <fullName>SBQQDS__Order__c</fullName>
        <inlineHelpText>Determines the order of the recipients, if a DocuSign Template ID is not defined.</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQDS__SourceEmailField__c</fullName>
        <inlineHelpText>The alias or API name of the field on Quote Document containing the email of the recipient.</inlineHelpText>
        <label>Source Email Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Recipient Email</fullName>
                </value>
                <value>
                    <fullName>Countersigner_Email__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQDS__SourceNameField__c</fullName>
        <inlineHelpText>The alias or API name of the field on Quote Document containing the name of the recipient.</inlineHelpText>
        <label>Source Name Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Recipient Name</fullName>
                </value>
                <value>
                    <fullName>Countersigner_Name__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQDS__Template__c</fullName>
        <description>Parent quote template.</description>
        <inlineHelpText>Quote Template using this recipient.</inlineHelpText>
        <label>Quote Template</label>
        <referenceTo>SBQQ__QuoteTemplate__c</referenceTo>
        <relationshipLabel>DocuSign Recipients</relationshipLabel>
        <relationshipName>DocuSignRecipients</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SBQQDS__Type__c</fullName>
        <inlineHelpText>Choose a common built-in role type which determines from where name and email is taken, or select Custom to define your own.</inlineHelpText>
        <label>Role Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Signer</fullName>
                </value>
                <value>
                    <fullName>Sender</fullName>
                </value>
                <value>
                    <fullName>Owner</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>DocuSign Recipient</label>
    <nameField>
        <label>Role Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DocuSign Recipients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>